# worldmaker

./: .gitignore  Dockerfile  LIFECYCLE-INTELLIGENCE.md  Makefile  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  restart.sh  shutdown.sh  start.sh
alembic/: env.py
alembic/versions/: 20260208_0001_initial_schema.py
frontend/: next.config.ts  package-lock.json  package.json
repos/catalog--2-aggregator/: Cargo.toml  Dockerfile  README.md  main.rs
repos/catalog--2-srv/: Application.kt  Dockerfile  README.md
repos/catalog-adapter/: Cargo.toml  Dockerfile  README.md  main.rs
repos/catalog-handler/: Application.kt  Dockerfile  README.md  build.gradle.kts
repos/notification-worker/: Application.kt  Dockerfile  README.md
repos/pricing--2-api/: Cargo.toml  Dockerfile  README.md  main.rs
repos/pricing--2-router/: Dockerfile  README.md  handler.ts  package.json
repos/pricing-api/: Dockerfile  README.md  go.mod  main.go
repos/push--2-producer/: Dockerfile  README.md  handler.py  requirements.txt
repos/push--2-scheduler/: Application.kt  Dockerfile  README.md
repos/push--3-gateway/: Application.kt  Dockerfile  README.md
repos/push--3-srv/: Cargo.toml  Dockerfile  README.md  main.rs
repos/push-handler/: Dockerfile  Handler.java  README.md  pom.xml
repos/push-router/: Cargo.toml  Dockerfile  README.md  main.rs
repos/query--2-api/: Cargo.toml  Dockerfile  README.md  main.rs
scripts/: commit.sh  take-enterprise-screenshots.mjs  take-screenshots.mjs
tests/: __init__.py  conftest.py  test_api.py  test_attributes.py  test_codegen.py  test_core_bootstrap.py  test_generators.py  test_memory_store.py  test_migrations.py  test_trace_engine.py
(+158 files in other folders)
