[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worldmaker"
version = "0.1.0"
description = "Sustained Enterprise Digital Lifecycle Management — async framework for synthetic ecosystem generation, dependency graph resolution, and real-time interoperability analysis."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "WorldMaker Team"}
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "motor>=3.6.0",
    "pymongo>=4.10.0",
    "neo4j>=5.26.0",
    "celery[redis]>=5.4.0",
    "aiokafka>=0.12.0",
    "alembic>=1.14.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
worldmaker = "worldmaker.cli.main:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "faker>=33.0.0",
    "pre-commit>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worldmaker"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90", "UP", "B", "A", "COM", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/worldmaker --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
